# tilavarauspalvelu-core

./: .dockerignore  .env  .env.development  .env.example  .env.local.example  .env.production  .env.test  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintstagedrc  .npmrc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintrc  .stylelintrc.json  .test_durations  .testcaferc.json  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.final  Dockerfile.local  LICENSE  MIGRATION.md  Makefile  README-ui.md  README.md  azure-pipelines-dev.yml  azure-pipelines-devtest.yml  azure-pipelines-release.yml  azure-pipelines-stageprod.yml  azure-pipelines.yml  black.toml  codegen.ts  docker-compose.yml  fixture_graph_commands.txt  (+30 more)
.github/: dependabot.yml  pr-labeler.yml  pull-request-template.md  pull_request_template.md  release.yml
.husky/: pre-commit
actions/: application.py  application_event.py  application_event_schedule.py  application_round.py  application_section.py  recurring_reservation.py  rejected_occurrence.py  reservation.py  reservation_unit.py
admin-ui/: .dockerignore  .env  .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .stylelintrc.json  Dockerfile  README.md  azure-pipelines.yml  build.sh  config-overrides.js  custom.d.ts  jest.config.js  jest.setup.ts  middleware.ts  next.config.js  next.config.mjs  package.json  server.cjs  stylelint.config.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tscheck.json
allocation/: README.md  allocation_data_builder.py  allocation_models.py  allocation_runner.py  allocation_solver.py  foo.py  models.py
api/: allocation_api.py  allocation_results_api.py  application_period_api.py  application_round_api.py  applications_api.py  base.py  city_api.py  common_filters.py  declined_reservation_units_api.py  examples.py  gdpr.py  hauki_api.py  ical_api.py  models.py  permissions.py  permissions_api.py  reservation_units_api.py  reservations_api.py  resources_api.py  services_api.py  space_api.py  urls.py  users_api.py
applications/: __init__.py  admin.py  allocation_result_mapper.py  apps.py  base_models.py  choices.py  enums.py  exporter.py  models.py  signals.py  tasks.py  translation.py  typing.py  validators.py
backend/: .dockerignore  .env.example  Makefile  README.md  azure-pipelines-dev.yml  azure-pipelines-release.yml  local_settings_example.py  pyproject.toml  sonar-project.properties
common/: .eslintignore  .eslintrc.js  .gitignore  README.md  codegen.yml  connectors.py  date_utils.py  db.py  enums.py  fields.py  filtersets.py  index.ts  package.json  serializers.py  tasks.py  translation.py  tsconfig.eslint.json  tsconfig.json  typing.py  utils.py
config/: auth.py  celery.py  health_checks.py  logging.py  middleware.py  settings.py  urls.py  wsgi.py
deploy/: entrypoint.sh  local_deps.sh  start_dev_server.sh  unregister_local.sh  uwsgi.yml
docker/: Dockerfile  Dockerfile.final  entrypoint.sh  entrypoint_dev.sh  uwsgi.yml  worker.sh
e2e/: config.ts
email_notification/: admin.py  apps.py  email_tester.py  email_utils.py  exceptions.py  helpers.py  models.py  tasks.py  templatetags.py  translation.py
fixtures/: cases.json
frontend/: .eslintignore  .npmrc  .oxlintrc.json  .prettierignore  Dockerfile  Dockerfile.final  graphql.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
graphql/: admin-queries.graphql  customer-queries.graphql
merchants/: admin.py  apps.py  enums.py  models.py  pruning.py  validators.py
modules/: ApiError.ts  api.ts  const.ts  global.d.ts  types.ts  util.test.ts  util.ts
nginx/: nginx.conf
opening_hours/: admin.py  apps.py  decorators.py  enums.py  errors.py  generate_url.py  hauki_link_generator.py  hauki_request.py  hours.py  models.py  querysets.py  resources.py  tasks.py  utils.py
pages/: index.tsx  intro.tsx  search.tsx
payments/: models.py  order_numbers.py
permissions/: admin.py  api_permissions.py  base_models.py  enums.py  getters.py  helpers.py  models.py  permission_resolver.py  translation.py
public/: index.html  manifest.json
reservation_units/: admin.py  apps.py  enums.py  models.py  models.py.orig  pricing_updates.py  querysets.py  signals.py  tasks.py  translation.py
reservations/: admin.py  allocation_data_builder.py  allocation_models.py  allocation_solver.py  apps.py  choices.py  email_utils.py  enums.py  forms.py  job_solver.py  models.py  pruning.py  querysets.py  signals.py  statistic_utils.py  tasks.py  translation.py
resources/: admin.py  choices.py  enums.py  models.py  translation.py
scripts/: gql-pluck.mjs
server/: config.js  index.js  server-no-ssr.js  server.test.js
services/: admin.py  models.py  translation.py
spaces/: admin.py  apps.py  models.py  querysets.py  signals.py  tasks.py  translation.py
src/: App.css  App.test.tsx  App.tsx  font.css  font.scss  index.css  index.scss  index.tsx  setupProxy.js  setupTests.ts  variables.css
terms_of_use/: admin.py  apps.py  models.py  translation.py
tests/: conftest.py  gql_builders.py  helpers.py  mocks.py  plugins.py
tilanvarauspalvelu/: asgi.py  settings.py  urls.py  wsgi.py
tilavarauspalvelu/: __init__.py  apps.py  asgi.py  auth.py  celery.py  constants.py  dataclasses.py  enums.py  exceptions.py  graphql_api_token_authentication.py  loggers.py  logging.py  middleware.py  multi_proxy_middleware.py  settings.py  signals.py  tasks.py  templatetags.py  translation.py  typing.py  urls.py  validators.py  wsgi.py
tilavarauspalvelu-ui-nextjs/: .babelrc  .dockerignore  Dockerfile  README.md  next-i18next.config.js  package-lock.json  package.json
tvp_admin/: admin_site.py  apps.py
ui/: .env.local.example  .eslintignore  .eslintrc.js  .gitignore  .stylelintrc  Dockerfile  README.md  azure-pipelines.yml  babel.config.js  codegen.yml  cypress.config.ts  jest.config.js  jest.config.json  jest.setup.js  jest.setup.ts  middleware.ts  next-i18next.config.js  next.config.js  package.json  sentry.client.config.js  sentry.properties  sentry.server.config.js  server.js  tsconfig.json  (+3 more)
(+8076 files in other folders)
